# WEB_HW_7

./: alembic.ini  config.ini  my_select.py  pyproject.toml
conf/: models.py
migrations/: env.py
migrations/versions/: 028d05d5eb31_init.py  d81b2f8691a7_init.py
seeds/: seed.py
